# pyedm

./: .gitignore  COPYRIGHT  CommandToRun  INSTALL  LICENSE.txt  Makefile  README  README.coding  cidproject.json  edm.py  makeTar  project.pj  runtest.sh  setup.py
Doc/: Class relations.odg  Process.odg
mks2git_logs/: checkpoint_version_1_2.txt  checkpoint_version_1_3.txt  checkpoint_version_1_4.txt  checkpoint_version_1_5.txt  checkpoint_version_1_6.txt  checkpoint_version_1_7.txt  checkpoint_version_1_8.txt  checkpoint_version_1_9.txt
pyedm/: __init__.py  __main__.py  colors.list  edmAbstractShape.py  edmAbstractSymbol.py  edmApp.py  edmColors.py  edmDisplay.py  edmEditWidget.py  edmField.py  edmFont.py  edmMacro.py  edmMain.py  edmMouseHandler.py  edmObject.py  edmPVcalc.py  edmPVepics.py  edmPVfactory.py  edmPVindirect.py  edmPVlocal.py  edmParentSupport.py  edmPopupEntry.py  edmProperty.py  edmScreen.py  edmTextFormat.py  edmWidget.py  edmWidgetSupport.py  edmWindowWidget.py  edmparsecalc.py  edmparsetable.py
pyedm/modules/: controlbar.py  displayarc.py  (+31 more)
pypi-deploy/: LICENSE  Makefile  README.md  pyproject.toml
pypi-deploy/src/: pyedm
testDir/: 05B1-1-BL_Vacuum.edl  DynamicSymbol.edl  README  base1.edl  configure.edl  embeddedWindow.edl  embeddedWindow2.edl  file.edl  heartbeat.edl  m1.edl  m2.edl  magDetails.edl  related.edl  run-procServ  symbolFile.edl  test.db  test1.db  test1.edl  test1.edm.edl  testControl.edl  testDisplay.edl  testEmbedded.edl  testMonitor.edl  testPlot.edl  testPlot2.edl  testPlot3.edl  testPlot4.edl  testPlot4.jedl  userScreen.edl
