[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyedm"
version = "2.2.0"
authors = [
  { name="Glen Wright", email="Glen.Wright@lightsource.ca" },
]
description = "replacement for EPICS Extensible Display Manager"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"pyepics",
	"PyQt5",
	"numpy",
	"pyqtgraph"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.lightsource.ca/cid/TOOL_edmPython"
"Bug Tracker" = "https://github.lightsource.ca/cid/TOOL_edmPython/issues"
