[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epics-pyedm"
version = "2.2.2"
authors = [
  { name="Glen Wright", email="Glen.Wright@lightsource.ca" },
]
description = "replacement for EPICS Extensible Display Manager"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	"pyepics",
	"PyQt5",
	"numpy",
	"pyqtgraph"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyedm = ["colors.list"]

[project.urls]
"Homepage" = "https://github.lightsource.ca/cid/TOOL_edmPython"
"Bug Tracker" = "https://github.lightsource.ca/cid/TOOL_edmPython/issues"
